[tool.poetry]
name = "repl_nix_site-cc-box"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-browser = "^0.2.0"
Flask-Cors = "^3.0.10"
Jinja2 = "^3.1.2"
Flask = "^2.2.2"
javascript = "^2015.32.59"
pygame = "^2.1.2"
bs4 = "^0.0.1"
pelican = "^4.8.0"
pytz = "^2022.4"
typogrify = "^2.0.7"
fabric = "^2.7.1"
gevent = "^22.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
